# numeral_to_int

./: README.md  pyproject.toml
src/numeral_to_int/: __main__.py  parser.py
tests/: parser_test.py
