[project]
name = "numeral-to-int"
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "Arthur Tucker", email = "firm.pin7067@fastmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
parse = "numeral_to_int.__main__:main"

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
